kubernetes/apps/base/dev/forgejo-runner/ciliumnetworkpolicy.yaml
---
# yaml-language-server: $schema=https://datreeio.github.io/CRDs-catalog/cilium.io/ciliumnetworkpolicy_v2.json
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: forgejo-runner
spec:
  endpointSelector:
    matchLabels:
      app.kubernetes.io/managed-by: forgejo-runner
  enableDefaultDeny:
    ingress: true
  egress:
    - # Forgejo server
      toEndpoints:
        - matchLabels:
            app.kubernetes.io/name: forgejo
      toPorts:
        - ports:
            - protocol: TCP
              port: "3000"
    - # Forgejo (External URL)
      toFQDNs:
        - matchName: git.${CLUSTER_DOMAIN}
    - # Internet egress
      toCIDRSet:
        # Internet egress
        - cidrGroupRef: internet
      toPorts:
        - ports:
            - protocol: TCP
              port: "80"
            - protocol: TCP
              port: "443"
